[alteracao de properties]

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,10 @@ spring.datasource.platform=postgres
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.database.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/fennec
+spring.datasource.url=jdbc:postgresql://ls-d131e2945372b8bfb92c1d4709d25fc753db8114.cqbtpiuprxws.us-east-1.rds.amazonaws.com:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=sa123
-server.port=8081
+spring.datasource.password=$%+zD4*d.e|_LhL5EN,!N1Z;~OJZRrYT
+server.port=8080
 
 security.oauth2.resource.id=bcrypt
 
