--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.database.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://ls-d131e2945372b8bfb92c1d4709d25fc753db8114.cqbtpiuprxws.us-east-1.rds.amazonaws.com:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=$%+zD4*d.e|_LhL5EN,!N1Z;~OJZRrYT
+spring.datasource.url=jdbc:postgresql://ls-83b4645dae7fc4e9a780a78e3209f3d5e324db8f.czau3l80ssyr.us-east-1.rds.amazonaws.com:5432/postgres
+spring.datasource.username=dbmasteruser
+spring.datasource.password=x1m|+|,e8*,GJ$jD|kON+TO$]Y$aaH6?
 server.port=80
 
 security.oauth2.resource.id=bcrypt
