--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PG_PASS=$%+zD4*d.e|_LhL5EN,!N1Z;~OJZRrYT
+PG_PASS=Rodrigo#2021
 PG_USER=postgres
 PGADMIN_EMAIL=admin@gmail.com
 PGADMIN_PASS=postgres
