--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,12 @@ spring.datasource.platform=postgres
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.database.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://ls-83b4645dae7fc4e9a780a78e3209f3d5e324db8f.czau3l80ssyr.us-east-1.rds.amazonaws.com:5432/postgres
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=dbmasteruser
-#spring.datasource.username=postgres
-spring.datasource.password=x1m|+|,e8*,GJ$jD|kON+TO$]Y$aaH6?
-#spring.datasource.password=Rodrigo#2021
+# spring.datasource.url=jdbc:postgresql://ls-83b4645dae7fc4e9a780a78e3209f3d5e324db8f.czau3l80ssyr.us-east-1.rds.amazonaws.com:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+# spring.datasource.username=dbmasteruser
+spring.datasource.username=postgres
+# spring.datasource.password=x1m|+|,e8*,GJ$jD|kON+TO$]Y$aaH6?
+spring.datasource.password=Rodrigo#2021
 server.port=3000
 
 security.oauth2.resource.id=bcrypt
