--- a/pom.xml
+++ b/pom.xml
@@ -125,8 +125,28 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.11.4</version>
 		</dependency>
-	</dependencies>
+
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>stomp-websocket</artifactId>
+			<version>2.3.3</version>
+		</dependency>
 	
+
+   <dependency>
+     <groupId>org.apache.servicemix.bundles</groupId>
+     <artifactId>org.apache.servicemix.bundles.spring-websocket</artifactId>
+     <version>4.3.30.RELEASE_1</version>
+   </dependency>
+ 
+   <dependency>
+     <groupId>org.springframework</groupId>
+     <artifactId>spring-messaging</artifactId>
+     <version>5.1.9.RELEASE</version>
+   </dependency>
+ </dependencies>
+	
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
