--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,12 @@
 			<version>2.3.3</version>
 		</dependency>
 	
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-mail</artifactId>
+		    <version>2.6.1</version>
+		</dependency>
 
    <dependency>
      <groupId>org.apache.servicemix.bundles</groupId>
