--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,24 @@ server.port=3000
 security.oauth2.resource.id=bcrypt
 
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
-jwt.expiration=86400000
+jwt.expiration=864000000
+
+spring.mail.host=smtp.gmail.com
+
 
 build.version=1.0
+spring.mail.port=587
+
+spring.mail.username=donotrplyifdt@gmail.com
+
+spring.mail.password=!fdt3ch@2021
+
+spring.mail.properties.mail.smtp.auth=true
+
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.mail.properties.mail.smtp.starttls.required=true
+
+spring.mail.properties.mail.smtp.ssl.enable=false
+
+spring.mail.test-connection=true
